--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libraries/selenium-server-standalone-2.53.1.jar"/>
+	<classpathentry kind="lib" path="libraries/jackson-annotations-2.14.2.jar"/>
+	<classpathentry kind="lib" path="libraries/jackson-core-2.14.2.jar"/>
+	<classpathentry kind="lib" path="libraries/jackson-databind-2.14.2.jar"/>
+	<classpathentry kind="lib" path="libraries/jlayer-1.0.1.jar"/>
+	<classpathentry kind="lib" path="libraries/okhttp-3.9.0.jar"/>
+	<classpathentry kind="lib" path="libraries/okio-1.13.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
